Updated gitignore for RVM/vi/emacs.

--- a/.gitignore
+++ b/.gitignore
@@ -35,15 +35,20 @@ pkg
 #tmtags
 
 # For emacs:
-#*~
-#\#*
-#.\#*
+*~
+\#*
+.\#*
 
 # For vim:
-#*.swp
+*.swp
 
 # For redcar:
 #.redcar
 
 # For rubinius:
 #*.rbc
+#
+
+# For RVM
+.ruby-version
+.ruby-gemset
